--- a/deliverables/queens/requirements.yaml
+++ b/deliverables/queens/requirements.yaml
@@ -7,3 +7,13 @@ release-model: cycle-with-intermediary
 stable-branch-type: tagless
 repository-settings:
   openstack/requirements: {}
+branches:
+  - name: stable/queens
+    location:
+      openstack/requirements: 6e25a6ae3bddf107f02199a9f4d4537ae8c3bd90
+releases:
+  - version: 1.2.0
+    projects:
+      - repo: openstack/requirements
+        hash: 6e25a6ae3bddf107f02199a9f4d4537ae8c3bd90
+        tarball-base: openstack_requirements
