Add release notes link for branched projects
Change-Id: I9fbe8a9931a29d50c59677fcd1884ac81963f28b

--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -35,3 +35,4 @@ releases:
 branches:
   - name: stable/queens
     location: 0.17.0
+release-notes: https://docs.openstack.org/releasenotes/castellan/queens.html
