--- a/deliverables/queens/debtcollector.yaml
+++ b/deliverables/queens/debtcollector.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.19.0
+release-notes: https://docs.openstack.org/releasenotes/debtcollector/queens.html
