--- a/deliverables/queens/futurist.yaml
+++ b/deliverables/queens/futurist.yaml
@@ -20,3 +20,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.6.0
+release-notes: https://docs.openstack.org/releasenotes/futurist/queens.html
