--- a/deliverables/queens/keystoneauth.yaml
+++ b/deliverables/queens/keystoneauth.yaml
@@ -23,3 +23,4 @@ type: library
 branches:
   - name: stable/queens
     location: 3.4.0
+release-notes: https://docs.openstack.org/releasenotes/keystoneauth/queens.html
