--- a/deliverables/queens/keystonemiddleware.yaml
+++ b/deliverables/queens/keystonemiddleware.yaml
@@ -24,3 +24,4 @@ type: library
 branches:
   - name: stable/queens
     location: 4.21.0
+release-notes: https://docs.openstack.org/releasenotes/keystonemiddleware/queens.html
