--- a/deliverables/queens/os-client-config.yaml
+++ b/deliverables/queens/os-client-config.yaml
@@ -2,7 +2,7 @@
 include-pypi-link: yes
 launchpad: os-client-config
 release-model: cycle-with-intermediary
-release-notes: https://docs.openstack.org/releasenotes/os-client-config
+release-notes: https://docs.openstack.org/releasenotes/os-client-config/queens.html
 team: OpenStackSDK
 type: library
 releases:
