--- a/deliverables/queens/os-win.yaml
+++ b/deliverables/queens/os-win.yaml
@@ -31,3 +31,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.0.0
+release-notes: https://docs.openstack.org/releasenotes/os-win/queens.html
