--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -36,3 +36,4 @@ releases:
 branches:
   - name: stable/queens
     location: 2.20.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.context/queens.html
