--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -40,3 +40,4 @@ releases:
 branches:
   - name: stable/queens
     location: 4.33.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.db/queens.html
