--- a/deliverables/queens/oslo.i18n.yaml
+++ b/deliverables/queens/oslo.i18n.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.19.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.i18n/queens.html
