--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -36,3 +36,4 @@ releases:
 branches:
   - name: stable/queens
     location: 5.35.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.messaging/queens.html
