--- a/deliverables/queens/oslo.middleware.yaml
+++ b/deliverables/queens/oslo.middleware.yaml
@@ -28,3 +28,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.34.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.middleware/queens.html
