--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -56,3 +56,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.33.1
+release-notes: https://docs.openstack.org/releasenotes/oslo.policy/queens.html
