--- a/deliverables/queens/oslo.reports.yaml
+++ b/deliverables/queens/oslo.reports.yaml
@@ -24,3 +24,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.26.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.reports/queens.html
