--- a/deliverables/queens/oslo.rootwrap.yaml
+++ b/deliverables/queens/oslo.rootwrap.yaml
@@ -28,3 +28,4 @@ releases:
 branches:
   - name: stable/queens
     location: 5.13.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.rootwrap/queens.html
