--- a/deliverables/queens/oslo.service.yaml
+++ b/deliverables/queens/oslo.service.yaml
@@ -28,3 +28,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.29.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.service/queens.html
