--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -38,3 +38,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.35.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.utils/queens.html
