--- a/deliverables/queens/oslosphinx.yaml
+++ b/deliverables/queens/oslosphinx.yaml
@@ -20,3 +20,4 @@ releases:
 branches:
   - name: stable/queens
     location: 4.18.0
+release-notes: https://docs.openstack.org/releasenotes/oslosphinx/queens.html
