--- a/deliverables/queens/python-cinderclient.yaml
+++ b/deliverables/queens/python-cinderclient.yaml
@@ -24,3 +24,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.5.0
+release-notes: https://docs.openstack.org/releasenotes/python-cinderclient/queens.html
