--- a/deliverables/queens/python-glanceclient.yaml
+++ b/deliverables/queens/python-glanceclient.yaml
@@ -18,3 +18,4 @@ releases:
     version: 2.9.1
 team: glance
 type: client-library
+release-notes: https://docs.openstack.org/releasenotes/python-glanceclient/queens.html
