--- a/deliverables/queens/python-ironicclient.yaml
+++ b/deliverables/queens/python-ironicclient.yaml
@@ -20,3 +20,4 @@ releases:
 branches:
   - name: stable/queens
     location: 2.2.0
+release-notes: https://docs.openstack.org/releasenotes/python-ironicclient/queens.html
