--- a/deliverables/queens/python-keystoneclient.yaml
+++ b/deliverables/queens/python-keystoneclient.yaml
@@ -16,3 +16,4 @@ releases:
       - hash: 1e8c9302fc055f78964f3eaef32e09dae89eb2fa
         repo: openstack/python-keystoneclient
     version: 3.15.0
+release-notes: https://docs.openstack.org/releasenotes/python-keystoneclient/queens.html
