--- a/deliverables/queens/python-mistralclient.yaml
+++ b/deliverables/queens/python-mistralclient.yaml
@@ -12,5 +12,6 @@ releases:
     projects:
       - repo: openstack/python-mistralclient
         hash: 69e8925b20ecf08647c1091d8928479c72533422
-    highlights: >
+    highlights: |
       - Fixed TARGET_ authentication parameters
+release-notes: https://docs.openstack.org/releasenotes/python-mistralclient/queens.html
