--- a/deliverables/queens/python-monascaclient.yaml
+++ b/deliverables/queens/python-monascaclient.yaml
@@ -20,3 +20,4 @@ releases:
       - hash: 5ea9035011a82a1f68be8cf9513e4eb0d67ac41d
         repo: openstack/python-monascaclient
     version: 1.10.0
+release-notes: https://docs.openstack.org/releasenotes/python-monascaclient/queens.html
