--- a/deliverables/queens/python-openstacksdk.yaml
+++ b/deliverables/queens/python-openstacksdk.yaml
@@ -1,7 +1,7 @@
 ---
 include-pypi-link: yes
 release-model: cycle-with-intermediary
-release-notes: https://docs.openstack.org/releasenotes/python-openstacksdk
+release-notes: https://docs.openstack.org/releasenotes/python-openstacksdk/queens.html
 launchpad: python-openstacksdk
 team: OpenStackSDK
 type: library
