--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -25,3 +25,4 @@ releases:
       - hash: b1a0e2228ad3e1bc51c607453b6ec5cf941c90fe
         repo: openstack/python-tripleoclient
     version: 9.1.0
+release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
