--- a/deliverables/queens/tooz.yaml
+++ b/deliverables/queens/tooz.yaml
@@ -12,3 +12,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.59.0
+release-notes: https://docs.openstack.org/releasenotes/tooz/queens.html
