--- a/deliverables/queens/automaton.yaml
+++ b/deliverables/queens/automaton.yaml
@@ -20,3 +20,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.14.0
+release-notes: https://docs.openstack.org/releasenotes/automaton/queens.html
