--- a/deliverables/queens/kuryr-libnetwork.yaml
+++ b/deliverables/queens/kuryr-libnetwork.yaml
@@ -15,3 +15,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.0.0
+release-notes: https://docs.openstack.org/releasenotes/kuryr-libnetwork/queens.html
