--- a/deliverables/queens/neutron-fwaas-dashboard.yaml
+++ b/deliverables/queens/neutron-fwaas-dashboard.yaml
@@ -15,3 +15,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.2.0
+release-notes: https://docs.openstack.org/releasenotes/neutron-fwaas-dashboard/queens.html
