--- a/deliverables/queens/osc-lib.yaml
+++ b/deliverables/queens/osc-lib.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.9.0
+release-notes: https://docs.openstack.org/releasenotes/osc-lib/queens.html
