--- a/deliverables/queens/oslo.cache.yaml
+++ b/deliverables/queens/oslo.cache.yaml
@@ -20,3 +20,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.28.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.cache/queens.html
