--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -24,3 +24,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.25.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.concurrency/queens.html
