--- a/deliverables/queens/oslo.config.yaml
+++ b/deliverables/queens/oslo.config.yaml
@@ -38,3 +38,4 @@ releases:
 branches:
   - name: stable/queens
     location: 5.2.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.config/queens.html
