--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -32,3 +32,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.36.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.log/queens.html
