--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -28,3 +28,4 @@ releases:
 branches:
   - name: stable/queens
     location: 2.23.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.serialization/queens.html
