--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -36,3 +36,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.31.1
+release-notes: https://docs.openstack.org/releasenotes/oslo.versionedobjects/queens.html
