--- a/deliverables/queens/oslo.vmware.yaml
+++ b/deliverables/queens/oslo.vmware.yaml
@@ -20,3 +20,4 @@ releases:
 branches:
   - name: stable/queens
     location: 2.26.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.vmware/queens.html
