--- a/deliverables/queens/oslotest.yaml
+++ b/deliverables/queens/oslotest.yaml
@@ -32,3 +32,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.2.0
+release-notes: https://docs.openstack.org/releasenotes/oslotest/queens.html
