--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -28,3 +28,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.15.1
+release-notes: https://docs.openstack.org/releasenotes/osprofiler/queens.html
