--- a/deliverables/queens/python-freezerclient.yaml
+++ b/deliverables/queens/python-freezerclient.yaml
@@ -15,3 +15,4 @@ releases:
 branches:
   - location: 1.6.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/python-freezerclient/queens.html
