--- a/deliverables/queens/python-ironic-inspector-client.yaml
+++ b/deliverables/queens/python-ironic-inspector-client.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.1.0
+release-notes: https://docs.openstack.org/releasenotes/python-ironic-inspector-client/queens.html
