--- a/deliverables/queens/python-muranoclient.yaml
+++ b/deliverables/queens/python-muranoclient.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.0.1
+release-notes: https://docs.openstack.org/releasenotes/python-muranoclient/queens.html
