--- a/deliverables/queens/python-neutronclient.yaml
+++ b/deliverables/queens/python-neutronclient.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - location: 6.7.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/python-neutronclient/queens.html
