--- a/deliverables/queens/python-openstackclient.yaml
+++ b/deliverables/queens/python-openstackclient.yaml
@@ -16,3 +16,4 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: fbee4eb76285ac8fc623b15b49c1d4efd5a71fc1
+release-notes: https://docs.openstack.org/releasenotes/python-openstackclient/queens.html
