--- a/deliverables/queens/python-saharaclient.yaml
+++ b/deliverables/queens/python-saharaclient.yaml
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/queens
     location: 1.5.0
+release-notes: https://docs.openstack.org/releasenotes/python-saharaclient/queens.html
