--- a/deliverables/queens/python-vitrageclient.yaml
+++ b/deliverables/queens/python-vitrageclient.yaml
@@ -16,3 +16,4 @@ releases:
       - Introduced template version 2
       - New API for template add and template delete
       - New API for webhook registration on Vitrage alarms
+release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/queens.html
