--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -32,3 +32,4 @@ releases:
 branches:
   - name: stable/queens
     location: 3.1.0
+release-notes: https://docs.openstack.org/releasenotes/taskflow/queens.html
