Add or update pike release notes links
Depends-on: https://review.openstack.org/540536
Change-Id: Ie42658df2aebd2563d693ff207abec5916cb1d52

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -64,3 +64,4 @@ releases:
     version: 7.4.8
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
