--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -32,3 +32,4 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: a097d59a5ec5b637eb4a61307e58a5e04f3cb43e
+release-notes: https://docs.openstack.org/releasenotes/kolla-ansible/pike.html
