--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -32,3 +32,4 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 5bae59ba945d20b1a75b086379d1f40f08b44196
+release-notes: https://docs.openstack.org/releasenotes/kolla/pike.html
