--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -44,3 +44,4 @@ releases:
       - hash: 79ec2f2a8b9f6d17c0a2af5dbdee96d3f0eaeae4
         repo: openstack/paunch
     version: 1.5.3
+release-notes: https://docs.openstack.org/releasenotes/paunch/pike.html
