--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -59,3 +59,4 @@ releases:
     version: 7.4.8
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
