--- a/deliverables/pike/puppet-vitrage.yaml
+++ b/deliverables/pike/puppet-vitrage.yaml
@@ -6,5 +6,6 @@ releases:
       - hash: 981f01d13ddd21c1362fc8e6c1445acdd74c10e3
         repo: openstack/puppet-vitrage
     version: 1.1.0
-team: Puppet OpenStack
+team: 'Puppet OpenStack'
 type: other
+release-notes: https://docs.openstack.org/releasenotes/puppet-vitrage/pike.html
