--- a/deliverables/pike/python-mistralclient.yaml
+++ b/deliverables/pike/python-mistralclient.yaml
@@ -37,5 +37,5 @@ releases:
     projects:
       - repo: openstack/python-mistralclient
         hash: 291501ae6dc16f20ed53af975840d6c3ef3acc7b
-    highlights: >
+    highlights: |
       - Don't perform authentication for help and bash completion.
