--- a/deliverables/pike/python-zaqarclient.yaml
+++ b/deliverables/pike/python-zaqarclient.yaml
@@ -1,10 +1,10 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-zaqarclient
 release-model: cycle-with-intermediary
 team: zaqar
 type: library
-release-notes: https://docs.openstack.org/releasenotes/python-zaqarclient/ocata.html
+release-notes: https://docs.openstack.org/releasenotes/python-zaqarclient/pike.html
 releases:
   - version: 1.5.0
     projects:
