--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -72,3 +72,4 @@ releases:
     version: 7.6.8
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
