--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -65,3 +65,4 @@ releases:
     version: 7.0.8
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
