--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -41,3 +41,4 @@ releases:
     version: 7.0.2
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-image-elements/pike.html
