--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -56,3 +56,4 @@ releases:
     version: 7.4.7
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-ui/pike.html
