--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -52,3 +52,4 @@ releases:
     version: 7.4.6
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/pike.html
