--- a/deliverables/pike/trove-dashboard.yaml
+++ b/deliverables/pike/trove-dashboard.yaml
@@ -28,3 +28,4 @@ releases:
       - repo: openstack/trove-dashboard
         hash: 387c3358555ee539f7abbbf4875497497e12c265
     version: 9.0.0
+release-notes: https://docs.openstack.org/releasenotes/trove-dashboard/pike.html
