--- a/deliverables/pike/watcher-dashboard.yaml
+++ b/deliverables/pike/watcher-dashboard.yaml
@@ -24,3 +24,4 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: 2e7f77ad48e9f231adaa11696af23962219c014e
+release-notes: https://docs.openstack.org/releasenotes/watcher-dashboard/pike.html
