--- a/deliverables/pike/zun-ui.yaml
+++ b/deliverables/pike/zun-ui.yaml
@@ -15,3 +15,4 @@ releases:
     projects:
       - repo: openstack/zun-ui
         hash: 7561c1b6aed9399980da3f9560e968b3dc97bc6a
+release-notes: https://docs.openstack.org/releasenotes/zun-ui/pike.html
