--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -47,3 +47,4 @@ releases:
 branches:
   - name: stable/pike
     location: 0.12.0
+release-notes: https://docs.openstack.org/releasenotes/castellan/pike.html
