--- a/deliverables/pike/ceilometermiddleware.yaml
+++ b/deliverables/pike/ceilometermiddleware.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: ceilometermiddleware
 release-model: cycle-with-intermediary
 team: Telemetry
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/pike
     location: 1.1.0
+release-notes: https://docs.openstack.org/releasenotes/ceilometermiddleware/pike.html
