--- a/deliverables/pike/cloudkitty.yaml
+++ b/deliverables/pike/cloudkitty.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: cloudkitty
 release-model: cycle-with-intermediary
 team: cloudkitty
@@ -12,7 +12,7 @@ releases:
     projects:
       - repo: openstack/cloudkitty
         hash: 069ea4ea237a1abbb1a0fe5d81263b69c733ff11
-    highlights: >
+    highlights: |
       - Add WSGI support for `cloudkitty-api'
       - Switch from oslosphinx to openstackdocstheme
       - Update URLs in documents according to document migration
@@ -20,3 +20,4 @@ releases:
       - Updated documentation
       - Update the devstack plugin
       - Fix the generated configuration samples
+release-notes: https://docs.openstack.org/releasenotes/cloudkitty/pike.html
