--- a/deliverables/pike/congress-dashboard.yaml
+++ b/deliverables/pike/congress-dashboard.yaml
@@ -27,3 +27,4 @@ releases:
 branches:
   - location: 1.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/congress-dashboard/pike.html
