--- a/deliverables/pike/designate.yaml
+++ b/deliverables/pike/designate.yaml
@@ -30,3 +30,4 @@ releases:
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/designate/pike.html
