--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -37,7 +37,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: edd59ae12d11db770cf7e1b0c306be34aacd3d2b
-    highlights: >
+    highlights: |
       - Several fixes for high severity, high impact bugs introduced in the
         16.0.0 release.
       - The nova-conductor service now depends on [placement] credentials
