--- a/deliverables/pike/puppet-barbican.yaml
+++ b/deliverables/pike/puppet-barbican.yaml
@@ -31,3 +31,4 @@ type: other
 branches:
   - location: 11.3.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/puppet-barbican/pike.html
