--- a/deliverables/pike/puppet-vswitch.yaml
+++ b/deliverables/pike/puppet-vswitch.yaml
@@ -31,3 +31,4 @@ type: other
 branches:
   - location: 7.3.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/puppet-vswitch/pike.html
