--- a/deliverables/pike/puppet-watcher.yaml
+++ b/deliverables/pike/puppet-watcher.yaml
@@ -27,3 +27,4 @@ type: other
 branches:
   - location: 11.3.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/puppet-watcher/pike.html
