--- a/deliverables/pike/python-cinderclient.yaml
+++ b/deliverables/pike/python-cinderclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-cinderclient
 release-model: cycle-with-intermediary
 team: cinder
@@ -26,11 +26,11 @@ releases:
     projects:
       - repo: openstack/python-cinderclient
         hash: 72671fffe51898446c8671e122cd6ef11171fdb1
-    highlights: >
-        - Highest supported microversion is 3.40.
-        - Routine dependency updates.
-        - Bug fixes and new features, along with some interface changes.
-          Read the release notes for details.
+    highlights: |
+      - Highest supported microversion is 3.40.
+      - Routine dependency updates.
+      - Bug fixes and new features, along with some interface changes.
+        Read the release notes for details.
   - version: 3.1.0
     projects:
       - repo: openstack/python-cinderclient
