--- a/deliverables/pike/python-octaviaclient.yaml
+++ b/deliverables/pike/python-octaviaclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: octavia
 release-model: cycle-with-intermediary
 team: octavia
@@ -9,20 +9,17 @@ releases:
     projects:
       - repo: openstack/python-octaviaclient
         hash: 970a232dc09e5142b5383bb3565b859568115e6c
-    highlights: |-
-      * Added loadbalancer list command
+    highlights: '* Added loadbalancer list command'
   - version: 1.0.0
     projects:
       - repo: openstack/python-octaviaclient
         hash: f99e89247a26fe0a3a8292e4563f75dbc702ff8d
-    highlights: |-
-      * Most commands are now complete
+    highlights: '* Most commands are now complete'
   - version: 1.1.0
     projects:
       - repo: openstack/python-octaviaclient
         hash: 2d0dc10f484d2d861359d582763a811de0c914ff
-    highlights: |-
-      * Fixed a bug when creating L7 rules
+    highlights: '* Fixed a bug when creating L7 rules'
   - version: 1.2.0
     projects:
       - repo: openstack/python-octaviaclient
@@ -30,3 +27,4 @@ releases:
 branches:
   - name: stable/pike
     location: 1.1.0
+release-notes: https://docs.openstack.org/releasenotes/python-octaviaclient/pike.html
