--- a/deliverables/pike/tacker.yaml
+++ b/deliverables/pike/tacker.yaml
@@ -15,3 +15,4 @@ releases:
     projects:
       - repo: openstack/tacker
         hash: 90f5374f73ea8dd5f41c9ca8f2ed447d5a37285a
+release-notes: https://docs.openstack.org/releasenotes/tacker/pike.html
