--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -49,3 +49,4 @@ releases:
     version: 7.0.4
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-puppet-elements/pike.html
