--- a/deliverables/pike/trove.yaml
+++ b/deliverables/pike/trove.yaml
@@ -28,3 +28,4 @@ releases:
       - repo: openstack/trove
         hash: 0fb67d459baa0fb22391b1b1da3dba5349666bb7
     version: 8.0.0
+release-notes: https://docs.openstack.org/releasenotes/trove/pike.html
