Add or update ocata release notes links
Depends-on: https://review.openstack.org/540536
Change-Id: Ibde6dd92237076dc24feef74128640ef03dcd355

--- a/deliverables/ocata/magnum.yaml
+++ b/deliverables/ocata/magnum.yaml
@@ -31,3 +31,4 @@ releases:
       - hash: a6d9f8950cfd91e5856a047061ac8057b7e257f3
         repo: openstack/magnum
     version: 4.1.4
+release-notes: https://docs.openstack.org/releasenotes/magnum/ocata.html
