--- a/deliverables/ocata/python-tackerclient.yaml
+++ b/deliverables/ocata/python-tackerclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-tackerclient
 release-model: cycle-with-intermediary
 team: tacker
