--- a/deliverables/ocata/tripleo-validations.yaml
+++ b/deliverables/ocata/tripleo-validations.yaml
@@ -40,3 +40,4 @@ releases:
     version: 5.6.3
 team: tripleo
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/ocata.html
