--- a/deliverables/ocata/python-manilaclient.yaml
+++ b/deliverables/ocata/python-manilaclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-manilaclient
 release-model: cycle-with-intermediary
 team: manila
