--- a/deliverables/ocata/python-muranoclient.yaml
+++ b/deliverables/ocata/python-muranoclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-muranoclient
 release-model: cycle-with-intermediary
 team: murano
