--- a/deliverables/ocata/python-vitrageclient.yaml
+++ b/deliverables/ocata/python-vitrageclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-vitrageclient
 release-model: cycle-with-intermediary
 team: vitrage
