Add release-type directives for pike
Some projects have updated their release-type for horizon
plugins in queens, but a similar change has not been done
in pike. Rather than waiting for their first stable release
request to fail, adding these changes to those deliverables
to account for these changes.

Change-Id: Ifd51d3dd1d04b1bb11d311fc46f6faf642d432c4

--- a/deliverables/pike/congress-dashboard.yaml
+++ b/deliverables/pike/congress-dashboard.yaml
@@ -3,6 +3,7 @@ launchpad: congress
 release-model: cycle-with-milestones
 team: congress
 type: horizon-plugin
+release-type: python-pypi
 releases:
   - version: 1.0.0.0b2
     projects:
