--- a/deliverables/pike/senlin-dashboard.yaml
+++ b/deliverables/pike/senlin-dashboard.yaml
@@ -3,6 +3,7 @@ launchpad: senlin-dashboard
 release-model: cycle-with-intermediary
 team: senlin
 type: horizon-plugin
+release-type: python-pypi
 branches:
   - name: stable/pike
     location: 0.7.0
