--- a/deliverables/pike/zaqar-ui.yaml
+++ b/deliverables/pike/zaqar-ui.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: zaqar-ui
 release-model: cycle-with-milestones
+release-type: python-service
 team: zaqar
 type: horizon-plugin
 release-notes: https://docs.openstack.org/releasenotes/zaqar-ui/ocata.html
