--- a/deliverables/pike/watcher-dashboard.yaml
+++ b/deliverables/pike/watcher-dashboard.yaml
@@ -3,6 +3,7 @@ launchpad: watcher-dashboard
 release-model: cycle-with-intermediary
 team: watcher
 type: horizon-plugin
+release-type: python-pypi
 branches:
   - name: stable/pike
     location: 1.4.0
