--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -990,3 +990,85 @@ releases:
         hash: f41638370114412b97c6523b4c626ca70f0337f4
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 61a3ab251f63c6156f2a6604ee1a822070e19c90
+  - version: 16.0.7
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 148bc8ad337973c58b545608e0e6e731ede226bb
+      - repo: openstack/ansible-hardening
+        hash: 7508acae6881fa8532a8c77d850f38ffa1a1124f
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: 9403a36513aee54c15890ac96c1f8c455f9c083d
+      - repo: openstack/openstack-ansible-pip_install
+        hash: ac2a1fe0e622dbee2fa44d005e4f373ab0aca023
+      - repo: openstack/openstack-ansible-galera_client
+        hash: 52b374547648056b58c544532296599801d501d7
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 8e831696cee8944f592449043838de97c0b001cb
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 5fcbc68fdbd3105d233fd3c03c887f13227b1c3d
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: edd3bf5e2144308a2c5de02f077d21a68f6c2305
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: c41d3b20da6be07d9bf5db7f7e6a1384c7cfb5eb
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 899d4c88b6c926a8cbacb5696617081904a9036d
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 08c483f3c5d49c236194090534a015b67c8cded6
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: a0d3b9c9756b6e95b0e034f3d0576fbb33607820
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: a9118824b86155c3d890b94749cac81e3affdbfc
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: b27229ef168aed7f2febf6991b2d7459ec8883ee
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: bcd77b1e10a7054e9365da6a20848b393153d025
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: 0797e8bdadd2fcf4696b22f0e18340c8d9539b09
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 4b3e0589a0188de885659614ef4e076018af54f7
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 94241fe2b198a5abd34a6026834dec96ba773f8e
+      - repo: openstack/openstack-ansible-os_designate
+        hash: eac6d3c674397097d8adf722635252b1822c8f6c
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 2caced40fb8de110590b46b27858f37255cb7f09
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 5f8950f61ed6b61d1cc06ab73b3b02466bee0db1
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 4d1efae631026631fb2af4f43a9fe8ca210d643e
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 41d8d7f055c58390586c0fc6991e8ca265299b78
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 34205b6b99fc3cfe54eddbcde0380e626976e425
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 0fdeea886ef4227e02d793f6dbfd54ccd9e6e088
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: 58cff32e954ab817d07b8e0a136663c34d7f7b60
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 2791c5ed9cef9055b552f96d4575d6baaee2f2c6
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 80e0d04822f7ddc5b8d574329e4eb8a76aea63ff
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: 5fd1fbae703c17f928cfc00f60aeeed0500c6f2b
+      - repo: openstack/openstack-ansible-os_rally
+        hash: b2658fb704fd3a1e8bce794b8bf87ac83931aa46
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: e3e4f1bc8d72dd6fb7e26b8d0d364f9a60e16b0f
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 0bb5979de285305f652694cee139390a8102c134
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 97d9f12a3982a5fd6bb838d783b4a4959fba2f5e
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 6596f6b28c88a88c89e293ea8f5f8551eb491fd1
+      - repo: openstack/openstack-ansible-plugins
+        hash: e0ef9e384ad36e12e013c39f0e379065f44cb0c9
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: fa80dfc0f8129e02f3f3b34bb7205889d3e5696c
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 4715ee7fed7c1789d4704a2d7683fa28df657af7
+      - repo: openstack/openstack-ansible-repo_server
+        hash: bbb02eb5d8205afad3119a7014bba30ab671b556
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: f41638370114412b97c6523b4c626ca70f0337f4
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 61a3ab251f63c6156f2a6604ee1a822070e19c90
