--- a/deliverables/queens/sushy.yaml
+++ b/deliverables/queens/sushy.yaml
@@ -12,6 +12,10 @@ releases:
       - hash: a31d7a40c324ad81308aec5ed33daf9f3650f88e
         repo: openstack/sushy
     version: 1.3.0
+  - projects:
+      - hash: 97c6bb52de79c34d168d64133397c6df3aa929da
+        repo: openstack/sushy
+    version: 1.3.1
 branches:
   - name: stable/queens
     location: 1.3.0
