pymod2pkg: Release 0.12.0
This release adds a rule for freezer-ui.

Change-Id: Ib73656964c7b023d3249b66370de79c50208f00b

--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -112,3 +112,7 @@ releases:
       - hash: 7347926f43de1695c1fa11b60f068c11a8c9bf55
         repo: openstack/pymod2pkg
     version: 0.11.0
+  - projects:
+      - hash: de7ab9f2025f6783e0df13773937e067524edf97
+        repo: openstack/pymod2pkg
+    version: 0.12.0
